--- a/src/app/components/form-step/form-step.component.html
+++ b/src/app/components/form-step/form-step.component.html
@@ -105,12 +105,13 @@
                                                 </span>
                                             </div>
 
-                                            <div *ngIf="!verDetalle" class="col-12 col-sm-12 subTitulo">
+                                            <!-- <div *ngIf="!verDetalle" class="col-12 col-sm-12 subTitulo">
                                                     <small>Este será el valor de la cuota mensual<b class="obligatorio">**</b></small>
-                                            </div>
+                                            </div> -->
 
                                             <div class="col-12 col-sm-12">
                                                     <mat-form-field class="full-width negValue" appearance="outline">
+                                                            <mat-label>Este será el valor de la cuota mensual<b class="obligatorio"> **</b></mat-label>
                                                             <input 
                                                             matInput
                                                             currencyMask
