--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -778,11 +778,16 @@ button{
   }
 
   .obligatorio{
+      font-size: 13px;
       color: $color-rojo;
   }
 
   .negValue input {
     color: black !important;
+}
+
+.mat-form-field-required-marker {
+    color: $color-rojo;
 }
   
 
