L mayúscula, redacción en mesaje, comunicará

--- a/src/app/components/form-step/form-step.component.html
+++ b/src/app/components/form-step/form-step.component.html
@@ -400,12 +400,12 @@
                 <!-- Negado -->
                 
                 <div *ngIf="negado" class="col-12 container text-center animated fadeIn">
-                    <p class="title">¡listo!</p>
+                    <p class="title">¡Listo!</p>
                     <hr>  
                     <img class="img-fluid" src="../../../assets/negado.png" alt="">
                     <p class="negado">¡Tu solicitud de crédito no es viable en estos momentos!</p>
                     <p class="small">
-                        Uno de nuestros asesores se comunicarán contigo para explorar alternativas 
+                        Uno de nuestros asesores se comunicará contigo para explorar alternativas 
                     </p>
                     <hr>
                 </div>
