Decimales en inputs modificados

--- a/src/app/components/form-step/form-step.component.html
+++ b/src/app/components/form-step/form-step.component.html
@@ -299,7 +299,7 @@
                                     <input 
                                     matInput
                                     currencyMask
-                                    [options]="{ align: 'left', prefix: '$ ', thousands: ',', decimal: ',', precision: 0 }"
+                                    [options]="{ align: 'left', prefix: '$ ', thousands: '.', decimal: ',', precision: 0 }"
                                     placeholder="Ingresos Mensuales"
                                     name="ingresoMensual"
                                     #ingresoMensual="ngModel"
