--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -161,8 +161,8 @@ input#defaultCheck1-input:focus {
     padding: 0px !important;
 }
 
-.principal {
-    background-color: $color-fondo !important;
+body {
+    /* background-color: $color-fondo !important; */
     @include tablet() {
         background-image: url(../assets/fondo.png);
         background-repeat: no-repeat;
@@ -425,7 +425,7 @@ button{
         grid-template-columns: repeat(2, 1fr);
         @include tablet(){
             grid-template-columns: repeat(3, 1fr);
-            width: 50%;
+            width: 70%;
             margin: 0 auto;
         }
         @include deskopt(){
@@ -536,6 +536,7 @@ button{
 .pie{
     img{
         width: 40%;
+        padding: 3%;
     }
     p.small{
         font-size: 10px;
