--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="splash text-center">
         <img src="../assets/logocy_negativo.svg" alt="" class="mercadoLogo">
         <p class="poBy">Powered By</p>
-        <img src="../assets/santander.png" alt="" class="santander">
+        <img src="../assets/consumerFinance.png" alt="" class="santander">
 </div>
 
 <div class="principal row grid animated fadeIn">
