--- a/src/app/components/form-step/form-step.component.html
+++ b/src/app/components/form-step/form-step.component.html
@@ -91,7 +91,7 @@
 
                                             <div class="col-12 col-sm-12">
                                                     <mat-form-field class="full-width negValue" appearance="outline">
-                                                            <mat-label>Este será el valor de la cuota mensual<b class="obligatorio"> **</b></mat-label>
+                                                            <mat-label>Este será el valor aproximado de la cuota mensual<b class="obligatorio"> **</b></mat-label>
                                                             <input 
                                                             matInput
                                                             currencyMask
@@ -114,7 +114,7 @@
                                             </div>
                                             
                                             <div class="col-12 col-sm-12">
-                                                    <small *ngIf="!verDetalle"><b class="obligatorio">** </b>Este valor corresponde al total sin seguros</small><br>
+                                                    <!-- <small *ngIf="!verDetalle"><b class="obligatorio">** </b>Este valor corresponde al total sin seguros</small><br> -->
                                                     <small class="infoRequerida"><b class="obligatorio">*</b>Información requerida</small>
                                                     <hr>
                                             </div>                    
