--- a/src/app/components/form-step/form-step.component.html
+++ b/src/app/components/form-step/form-step.component.html
@@ -25,6 +25,7 @@
                                                         <mat-label>¿Cuánto dinero deseas financiar?</mat-label>
                                                         <input 
                                                         matInput
+                                                        type="tel"
                                                         currencyMask
                                                         placeholder="¿Cuánto dinero deseas financiar?"
                                                         name="valorFinanciar"
@@ -91,7 +92,7 @@
 
                                             <div class="col-12 col-sm-12">
                                                     <mat-form-field class="full-width negValue" appearance="outline">
-                                                            <mat-label>Este será el valor aproximado de la cuota mensual<b class="obligatorio"> **</b></mat-label>
+                                                            <mat-label>Este será el valor aproximado de la cuota mensual</mat-label>
                                                             <input 
                                                             matInput
                                                             currencyMask
