Cambios de front y steppers

--- a/src/app/components/form-step/form-step.component.html
+++ b/src/app/components/form-step/form-step.component.html
@@ -133,7 +133,7 @@
 
         <!-- Paso 2 -->
 
-        <mat-step label="Cuéntanos de ti" [stepControl]="formTc" [editable]="editable" linear="true" completed="false">
+        <mat-step label="Cuéntanos de ti" [stepControl]="formTc" [editable]="editable" linear="true">
 
             <form #formTc="ngForm" (ngSubmit)="sendCentrales()">
                     <div class="row absolute unoStep">
