--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -166,9 +166,9 @@ body {
     @include tablet() {
         background-image: url(../assets/fondo.png);
         background-repeat: no-repeat;
-        background-position: center center;
+        background-position: top center;
         background-attachment: fixed;
-        background-size: cover; 
+        background-size: cover;
     }    
 }
 
