Mensaje Aprobado cambiado, Info oculta

--- a/src/app/components/form-step/form-step.component.html
+++ b/src/app/components/form-step/form-step.component.html
@@ -103,7 +103,7 @@
                                                             [(ngModel)]="valorCuota"
                                                             required
                                                             disabled>
-                                                            <mat-icon matSuffix (click)="verDetalles()">info</mat-icon>
+                                                            <!-- <mat-icon matSuffix (click)="verDetalles()">info</mat-icon> -->
                                                         </mat-form-field>
 
                                                         <div class="contDetalles" *ngIf="verDetalle">
@@ -374,9 +374,9 @@
                         <p class="title">¡Listo!</p>
                         <hr>  
                         <img class="img-fluid" src="../../../assets/aprobado.png" alt="">
-                        <p class="aprobado">¡Tu solicitud es viable!</p>
+                        <p class="aprobado">¡Tu crédito es viable!</p>
                         <p class="small">
-                        Pronto uno de nuestros asesores se comunicará contigo para continuar tu solicitud de crédito 
+                            Pronto uno de nuestros asesores te llamara para acompañarte hasta que tengas tu vehículo. Estas a una llamada de tener carro ya
                         </p>
                         <hr>                    
                     </div>
