Cambios finales, expresión numero celular validando

--- a/src/app/components/form-step/form-step.component.html
+++ b/src/app/components/form-step/form-step.component.html
@@ -36,7 +36,7 @@
                                                         [min]="minF"
                                                         required>
                                                         <mat-error id="uno" class="col-12 error" *ngIf="valorFinanciar.touched && valorFinanciar.errors?.required" class="error error col-12">Inserta el valor a financiar</mat-error>   
-                                                        <mat-error id="uno" class="col-12 error" *ngIf="valorFinanciar.touched && valorFinanciar.errors?.min" class="error error col-12">El valor mínimo debe ser $ {{minF | number:'1.0-0'}}</mat-error>
+                                                        <mat-error id="uno" class="col-12 error" *ngIf="valorFinanciar.touched && valorFinanciar.errors?.min" class="error error col-12">El valor mínimo debe ser $ {{minF | number:'1.0-0':'es'}}</mat-error>
                                                 </mat-form-field>
                                         </div>
 
@@ -107,10 +107,10 @@
                                                         </mat-form-field>
 
                                                         <div class="contDetalles" *ngIf="verDetalle">
-                                                           <small>Valor cuota: $ {{valorFinanciarCop == 0 || valorFinanciarCop == undefined ? 0 : valorCuota | number:'1.0-0'}}<br>
-                                                            <!-- Costo total del seguro: $ {{valorFinanciarCop == 0 || valorFinanciarCop == undefined ? 0 :seguroTotal | number:'1.0-0'}}<br>
-                                                            Cuota mensual del seguro: $ {{valorFinanciarCop == 0 || valorFinanciarCop == undefined ? 0 :seguroCuota | number:'1.0-0'}}<br> -->
-                                                            Monto total a financiar: $ {{valorFinanciarCop == 0 || valorFinanciarCop == undefined ? 0 :valorFinanciarCop | number:'1.0-0'}}<br></small>
+                                                           <small>Valor cuota: $ {{valorFinanciarCop == 0 || valorFinanciarCop == undefined ? 0 : valorCuota | number:'1.0-0':'es'}}<br>
+                                                            <!-- Costo total del seguro: $ {{valorFinanciarCop == 0 || valorFinanciarCop == undefined ? 0 :seguroTotal | number:'1.0-0':'es'}}<br>
+                                                            Cuota mensual del seguro: $ {{valorFinanciarCop == 0 || valorFinanciarCop == undefined ? 0 :seguroCuota | number:'1.0-0':'es'}}<br> -->
+                                                            Monto total a financiar: $ {{valorFinanciarCop == 0 || valorFinanciarCop == undefined ? 0 :valorFinanciarCop | number:'1.0-0':'es'}}<br></small>
                                                         </div>
                                             </div>
                                             
@@ -174,6 +174,7 @@
                         maxlength="90"
                         [(ngModel)]="contacto.DatosBasicos.Nombre1"
                         #nombre="ngModel"
+                        (keypress)="patternCoincide($event, env.patternLetter)"
                         [(pattern)]="env.patternLetter"
                         required>
                             <mat-error class="col-12 error" *ngIf="nombre.touched && nombre.errors?.required">Necesitamos saber tu nombre</mat-error>
@@ -209,7 +210,7 @@
                             minlength="6"
                             maxlength="15"
                             placeholder="Número de Identificación"
-                            (keypress)="oldNumbers($event)"
+                            (keypress)="patternCoincide($event, env.patternNumber)"
                             [(pattern)]="env.patternNumber"
                             required>
                                 <mat-error class="col-12 error" *ngIf="numeroDocumento.touched && numeroDocumento.errors?.required">Necesitamos saber tu número de identificación</mat-error>
@@ -230,8 +231,8 @@
                                 minlength="10" 
                                 maxlength="10"
                                 #celular="ngModel"
-                                (keypress)="oldNumbers($event)"
-                                [(pattern)]="env.patternNumber"
+                                (keypress)="patternCoincide($event, env.patternNumber)"
+                                [(pattern)]="env.patternCel"
                                 required
                                 >
                                     <mat-error class="col-12 error"*ngIf="celular.touched && celular.errors?.required">Necesitamos saber tu teléfono de contacto</mat-error>
@@ -250,7 +251,7 @@
                             name="CorreoPersonal"
                             [(ngModel)]="contacto.DatosBasicos.CorreoPersonal"
                             #correoPersonal="ngModel"
-                            pattern="^([\w\.\-]+)@([\w\-]+)((\.(\w){2,3})+)$"
+                            [(pattern)]="env.patternMail"
                             required
                             >                                       
                             <mat-error *ngIf="correoPersonal.touched && correoPersonal.errors?.required" class="error">Necesitamos saber tu correo electrónico</mat-error>
@@ -384,12 +385,12 @@
                 <!-- Negado -->
                 
                 <div *ngIf="negado" class="col-12 container text-center animated fadeIn">
-                    <p class="title">¡Listo!</p>
+                    <p class="title">¡Lo sentimos!</p>
                     <hr>  
                     <img class="img-fluid" src="../../../assets/negado.png" alt="">
                     <p class="negado">¡Tu solicitud de crédito no es viable en estos momentos!</p>
                     <p class="small">
-                        Uno de nuestros asesores se comunicará contigo para explorar alternativas 
+                        Esperamos que cuentes con nosotros en una próxima oportunidad
                     </p>
                     <hr>
                 </div>
