Espacio entre inputs por alerta teléfono

--- a/src/app/components/form-step/form-step.component.html
+++ b/src/app/components/form-step/form-step.component.html
@@ -137,7 +137,7 @@
 
             <form #formTc="ngForm" (ngSubmit)="sendCentrales()">
                     <div class="row absolute unoStep">
-                    <div class="col-12 col-sm-12">
+                    <div class="col-12 col-sm-12 mb-3">
                         <div class="title">Cuéntanos de ti</div>
                         <hr>
 
@@ -183,7 +183,7 @@
                     </mat-form-field>
                     </div>
 
-                    <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-6 mb-3">
                             <mat-form-field class="full-width" appearance="outline">
                                     <mat-label>Tipo de Identificación</mat-label>
                                     <select 
@@ -198,7 +198,7 @@
                                     </select>
                             </mat-form-field>
                     </div>
-                    <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-6 mb-3">
                     <mat-form-field class="full-width" appearance="outline">
                             <mat-label>Número de Identificación</mat-label>
                             <input 
@@ -219,7 +219,7 @@
                     </mat-form-field>
                     </div>
 
-                    <div class="col-12 col-sm-12 col-12-md col-12-lg">
+                    <div class="col-12 col-sm-12 col-12-md col-12-lg mb-3">
                         <mat-form-field class="full-width" appearance="outline">
                                 <mat-label>Teléfono de contacto</mat-label>
                                 <input 
@@ -241,7 +241,7 @@
                         </mat-form-field>
                     </div>
 
-                    <div class="col-12 col-sm-12 col-12-md col-12-lg">
+                    <div class="col-12 col-sm-12 col-12-md col-12-lg mb-3">
                         <mat-form-field class="full-width" appearance="outline">
                                 <mat-label>Correo electrónico</mat-label>
                             <input
@@ -259,7 +259,7 @@
                         </mat-form-field>                                                                  
                     </div>
 
-                    <div class="col-12 col-sm-12 col-12-md col-12-lg">
+                    <div class="col-12 col-sm-12 col-12-md col-12-lg mb-3">
                         <mat-form-field class="full-width" appearance="outline">
                                 <mat-label>Tipo de ocupación</mat-label>
                                 <select 
@@ -276,7 +276,7 @@
                         </mat-form-field>
                     </div>
 
-                    <div class="col-12 col-sm-12">
+                    <div class="col-12 col-sm-12 mb-3">
                             <mat-form-field class="full-width" appearance="outline">
                                     <mat-label>Ingresos Mensuales</mat-label>
                                     <input 
