--- a/src/app/components/form-step/form-step.component.html
+++ b/src/app/components/form-step/form-step.component.html
@@ -338,7 +338,7 @@
                   <hr class="hrModal">
                   <div class="btnTyc">
                     <div class="squareModal">
-                            Es requisito indispensable que el solicitante, entendido este como cualquier persona natural o jurídica que acceda al presente Portal (Nombre del portal/URL) y desee iniciar una solicitud para estudio de viabilidad de financiación de vehículo automotor con Santander Consumer Finance S.A.S (En adelante “Santander Consumer”), entienda y acepte de manera expresa, voluntaria e irrevocable los términos y condiciones que a continuación se indican:<br><br>
+                            Es requisito indispensable que el solicitante, entendido este como cualquier persona natural o jurídica que acceda al presente Portal (Carro Ya) y desee iniciar una solicitud para estudio de viabilidad de financiación de vehículo automotor con Santander Consumer Finance S.A.S (En adelante “Santander Consumer”), entienda y acepte de manera expresa, voluntaria e irrevocable los términos y condiciones que a continuación se indican:<br><br>
                             El presente Portal es solo un canal para recopilar información personal del solicitante, con la finalidad de poder realizar el estudio crediticio del mismo para la determinación de la aprobación o no del crédito.<br><br>                            
                             El otorgamiento de los planes de financiación anunciados así como las tasas ofrecidas, están sujetas al cumplimiento de las políticas de crédito de las entidades financieras aliadas de Santander Consumer y al perfil crediticio del solicitante.<br><br>
                             
@@ -390,7 +390,7 @@
                     <img class="img-fluid" src="../../../assets/negado.png" alt="">
                     <p class="negado">¡Tu solicitud de crédito no es viable en estos momentos!</p>
                     <p class="small">
-                        Esperamos que cuentes con nosotros en una próxima oportunidad
+                        Esperamos que cuentes con nosotros en una próxima oportunidad.
                     </p>
                     <hr>
                 </div>
@@ -407,7 +407,7 @@
             <div class="col-12 pie">
                     <div class="contPie">
                     <img src="../../../assets/costumerFinance.png" alt="" class="santanderGray"><br>
-                    <p class="small">© 2020 – Solicitud de crédito</p>
+                    <p class="small">© {{dateNow}} – Solicitud de crédito</p>
                     </div>
             </div>
     </div>
