--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="splash text-center">
-        <img src="../assets/logocy_negativo.svg" alt="" class="mercadoLogo">
+        <img src="../assets/logo.png" alt="" class="mercadoLogo">
         <p class="poBy">Powered By</p>
         <img src="../assets/consumerFinance.png" alt="" class="santander">
 </div>
@@ -7,9 +7,9 @@
 <div class="principal row grid animated fadeIn">
     <div class="encMercadolibre">
         <div class="logos">
-            <img class="mercadolibreT" src="../assets/logocy_negativo.svg" alt="">
-            <img class="mercadolibreM" src="../assets/logocy_negativo.svg" alt="">
-            <img class="santanderWt" src="../assets/sconsumerwt.png" alt="">
+            <img class="mercadolibreT" src="../assets/logo.png" alt="">
+            <img class="mercadolibreM" src="../assets/logo.png" alt="">
+            <img class="santanderWt" src="../assets/consumerFinance.png" alt="">
         </div>
     </div>
     <app-form-step></app-form-step>
