--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,4 +1,4 @@
-$color-btn-activo: #F10024;
+$color-btn-activo: #B71C1C;
 $color-btn-disabled: #C2C2C2;
 $grisOscuro: rgba(194, 194, 194, 0.747);
 $grissOscuro: #666674;
